taritree - minor edits. some comments added.

--- a/B8Paper/10-Introduction.tex
+++ b/B8Paper/10-Introduction.tex
@@ -13,7 +13,7 @@ allow neutrinoless double-beta decay, in which a nucleus undergoes a
 second order $\beta$-decay without producing any neutrinos,
 $(Z,A)\rightarrow(Z+2,A)+2\beta^-$~\cite{Furry1939}.  This is in
 contrast to the Goeppert-Mayer two-neutrino double beta (2{\nbb})
-decay, the second order Standard Model \bmd-decay channel in which
+decay, the second order standard model (SM) \bmd-decay channel in which
 lepton number is conserved by the production of two anti-neutrinos,
 \mbox{$(Z,A)\rightarrow(Z,A+2)+2\beta+2\bar\nu_e$}~\cite{GoeppertMayer1935}.
 
@@ -30,7 +30,7 @@ detect or rule out 0{\nbb} decay down to \mbox{$m_{\beta\beta}\lesssim
 active isotope with good energy resolution and a near zero background.
 
 Liquid scintillator-based detectors have proven to be a competitive
-technology~\cite{KamLANDZen2013}, and offer the advantage of
+technology~\cite{KamLANDZen2013} and offer the advantage of
 scalability to larger instrumented masses by dissolving larger amounts
 of the isotope of interest into the liquid scintillator (LS).  This
 may allow scaling to 1~ton or more of isotope using detectors already
@@ -45,10 +45,10 @@ neutrinos from $^8$B decays in the sun.
  In a previous work~\cite{Aberle2014} we have shown that large-area
 photo-detectors with timing resolution of $\sim$100~ps can be used to
 resolve prompt Cherenkov photons from the slower scintillation signal
-in a large LS detector, and the resulting distributions can be fit for
+in a large LS detector and that the resulting distributions can be fit for
 the directions and origin of $\sim$MeV electrons. Here we present a
 study of applying this technique to the topological separation of
-0\nbb-decay signal and \B~ background, using a spherical harmonic
+0\nbb-decay signal and \B~ background using a spherical harmonic
 decomposition to analyze the distribution of early (and hence weighted
 toward Cherenkov photons) photo-electrons as a topological
 discriminant.
@@ -56,11 +56,11 @@ discriminant.
 The organization of the paper is as follows. 
 Section~\ref{sec:detector_description} describes
 the detector model. Details on event
-kinematics and PE timing for signal and background are given in
+kinematics and photoelectron (PE) timing for signal and background are given in
 Section~\ref{sec:kinematics_and_timing} In
 Section~\ref{sec:topology_and_harmonics}, we introduce the spherical
-harmonic decomposition, and discuss the performance of this analysis
-in Section~\ref{sec:performance}. The conclusions are summarized in  Section~\ref{sec:conclusions}.
+harmonic decomposition and discuss the performance of this analysis
+in Section~\ref{sec:performance}. The conclusions are summarized in Section~\ref{sec:conclusions}.
 
 
 
