--- a/B8Paper/30-SphericalHarmonics.tex
+++ b/B8Paper/30-SphericalHarmonics.tex
@@ -6,7 +6,7 @@ decomposition to discriminate the topologies of 0\nbb-decay
 two-electron events and \B-neutrino single-electron events. The
 identification of the Cherenkov photon clusters is challenging due to
 the smearing of the characteristic ring pattern by multiple scattering
-of the electrons, and by the smallness of the Cherenkov signal
+of the electrons and by the smallness of the Cherenkov signal
 relative to the large amount of uniformly-distributed scintillation
 light.  We find that performing the spherical harmonics analysis on
 the smaller early PE sub-sample, which has a relatively high fraction
@@ -19,12 +19,12 @@ scintillator than in the model.
 
 With \Te as the active isotope, all background from \B~solar neutrinos
 will have the single electron above Cherenkov threshold in the liquid
-scintillator. Also a large fraction of 0\nbb-decay signal events will
+scintillator. Also, a large fraction of 0\nbb-decay signal events will
 have both electrons above Cherenkov threshold.
 
 In some cases only one Cherenkov cluster is produced in 0\nbb-decay
 signal events. This happens either when the angle between the two
-0\nbb-decay electrons is small and Cherenkov clusters overlap, or when
+0\nbb-decay electrons is small and Cherenkov clusters overlap or when
 the energy split between electrons is not balanced, causing one
 electron to be below Cherenkov threshold.  Such signal events cannot
 be separated from background based on the topology of the distribution
@@ -34,13 +34,13 @@ still be reconstructed. This directionality information may allow for
 suppression of \B~events based on the position of the
 sun~\cite{sun_direction_cut}.
 
-For the purpose of illustration of the spherical harmonics analysis
-concept we first consider two distinct topologies: a) two electrons
+For the purpose of illustrating the spherical harmonics analysis
+concept, we first consider two distinct topologies: a) two electrons
 produced back-to-back at an 180$^{\circ}$ angle;  and b) a single electron.
 Figure~\ref{fig:ThreeTopologies_Display_NoMultScat} shows an idealized
 simulation of these two topologies for a total electron energy of
 2.53~MeV. In order to emphasize ring patterns formed by Cherenkov
-photons the electron multiple scattering process is turned off in this
+photons, the electron multiple scattering process is turned off in this
 idealized simulation and a photocathode QE of 30\% is used for both
 Cherenkov and scintillation photons. Here the single-electron event
 represents an idealized \B~event topology and the two-electron events
@@ -63,7 +63,7 @@ single 2.53~MeV electron. A 30\% QE is assumed for both Cherenkov
 photons (triangles) and scintillation photons (dots).  
 \emph{Bottom panel:} The normalized power spectrum $S_l$ for the
 Cherenkov photons only, calculated event-by-event for the two
-above topologies The height of the rectangular boxes correspond to a 
+above topologies. The height of the rectangular boxes correspond to a 
 63\% confidence level $(\pm 1 ~\sigma)$.}
   \label{fig:ThreeTopologies_Display_NoMultScat}
 \end{figure*}
@@ -85,11 +85,11 @@ photons~\cite{QE}. The method gives a good separation between the
 two event topologies.
 
 However, at energies relevant to 0\nbb-decay the Cherenkov rings
-become very fuzzy due to electron multiple scattering. In most cases
+become very fuzzy due to electron multiple scattering. In most cases,
 $\sim$1~MeV electrons produce randomly shaped clusters of Cherenkov
 photons around the direction of the electron track.  Examples of \Te~
-0\nbb~and \B~events simulated with multiple scattering but still at
-the center of the detector are shown in Fig.~\ref{fig:Te130_Display}.
+0\nbb~and \B~events simulated with multiple scattering, but still at
+the center of the detector, are shown in Fig.~\ref{fig:Te130_Display}.
 \Te~ events are generated based on the phase factors described
 in~\cite{Jenni}.  $^{8}$B events are implemented as
 monochromatic electrons with the initial direction along the
@@ -114,7 +114,7 @@ signal from \B~background events.
 and at the center of the detector for: (\emph{top left}) a signal
 event with two 1.26~MeV back-to-back electrons; and (\emph{top right
 })a \B-neutrino background event with a single 2.53~MeV electron. The
-model QE's are assumed for both Cherenkov photons (triangles) and
+model QEs are assumed for both Cherenkov photons (triangles) and
 scintillation photons (dots).  \emph{Bottom panel:} The normalized
 power spectrum $S_l$ for the Cherenkov photons, calculated
 event-by-event for 1000 events of each of the two above topologies. The
