--- a/B8Paper/50-Conclusions.tex
+++ b/B8Paper/50-Conclusions.tex
@@ -4,9 +4,9 @@ We consider the use of large-area photodetectors with good time and
 space resolution in kiloton scale liquid scintillator detectors to
 suppress background coming from $^{8}$B solar neutrino
 interactions. Using a default model detector with parameters derived
-from present practice we show that a sample of detected photons
+from present practice, we show that a sample of detected photons
 enriched in Cherenkov light by a cut on time-of-arrival contains
-directional information can be used to separate 0{\nbb}~ decay from
+directional information that can be used to separate 0{\nbb}~ decay from
 $^{8}$B solar neutrino interactions. The separation is based on a
 spherical harmonics analysis of the event topologies of the
 two electrons in signal events and the single electron in the
