--- a/B8Paper/abstract.tex
+++ b/B8Paper/abstract.tex
@@ -1,14 +1,14 @@
 We present a technique for separating nuclear double beta decay
 (\bb-decay) events from background neutrino interactions due to
 \B~decays in the sun.  This background becomes dominant in a
-kiloton-scale liquid-scintillator detector deep underground, and is
+kiloton-scale liquid-scintillator detector deep underground and is
 usually considered as irreducible due to an overlap in deposited
 energy with the signal.  However, electrons from 0\nbb-decay often
 exceed the Cherenkov threshold in liquid scintillator, producing
 photons that are prompt and correlated in direction with the
-initial electron direction.. The use of large-area fast photodetectors
+initial electron direction. The use of large-area fast photodetectors
 allows some separation of these prompt photons from delayed isotropic
-scintillation light, and thus the possibility of reconstructing the
+scintillation light and, thus, the possibility of reconstructing the
 event topology.  Using a simulation of a 6.5~m radius liquid
 scintillator detector with 100~ps resolution photodetectors, we show
 that a spherical harmonics analysis of early-arrival light can
