--- a/B8Paper/25-EventTiming.tex
+++ b/B8Paper/25-EventTiming.tex
@@ -1,6 +1,9 @@
 \section{Kinematics and Timing of Signal and Background events}
 \label{sec:kinematics_and_timing}
 
+%% Taritree (9/20/16): The SM abbreaviation is used fo the first time here without introduction.
+%% I've added the abbreviation to the introduction.
+
 \subsection{Kinematics of the 0\nbb-decay signal}
 
 We simulate the kinematics of 0\nbb~ events using a custom Monte
@@ -64,10 +67,10 @@ production of Cherenkov light.
 Examining the kinematics for one of the electrons from \Te~
 0\nbb~decay with an equal energy split, the 1.26~MeV electron travels
 on average a total path length of 7.1$\pm$0.9~mm, has a distance from
-the origin of 5.6$\pm$1.0~mm in 26 $\pm$4~ps and takes
+the origin of 5.6$\pm$1.0~mm in 26 $\pm$4~ps, and takes
 24$\pm$3~ps to drop below Cherenkov threshold.  We note that due
 to scattering of the electron, the final direction of the electron
-before it stops does not correspond to the initial direction; however
+before it stops does not correspond to the initial direction; however,
 the scattering angle is small at the time that the majority of
 Cherenkov light is produced.
 
@@ -84,7 +87,7 @@ The right-hand panel shows the composition of the early PE sample,
 selected with a time cut of 33.5~ns (vertical line on plot). On
 average each \Te~ 0\nbb-decay produces 62.8$\pm$0.3 PEs in the early
 PE sample, with an RMS width of 8.9 PEs from event-by-event
-fluctuations.  On average the early PE sample consist of 28.6$\pm$0.2
+fluctuations.  On average the early PE sample consists of 28.6$\pm$0.2
 scintillation PEs and 34.2$\pm$0.2 Cherenkov PEs, with RMS
 distribution widths of 5.2 and 7.3 PEs respectively.
 
@@ -94,11 +97,11 @@ distribution widths of 5.2 and 7.3 PEs respectively.
   \includegraphics[width=0.45\textwidth]{hT_Te130_v2.pdf}
 \hfil
   \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130.pdf}
-  \caption{\emph{Left:} Photo-electron (PE) arrival times after
+  \caption{\emph{Left:} Photoelectron (PE) arrival times after
     application of the photo-detector transit time spread (TTS) of
     100~ps for the default simulation of \Te~0\nbb-decay produced at
     the center of the detector.  Scintillation PEs (blue solid line)
-    are compared to Cherenkov PEs (red dotted line) The vertical line
+    are compared to Cherenkov PEs (red dotted line). The vertical line
     at 33.5~ns indicates the time cut for the selection of the early
     PE sample.  \emph{Right:} Composition of the early PE sample (to
     the left of the vertical line in the left-hand panel):
@@ -111,14 +114,14 @@ distribution widths of 5.2 and 7.3 PEs respectively.
 
 \subsection{\B~ solar neutrino background}
 
-For a detector similar to our model, \B~solar neutrino background is
+For a detector similar to our model, the \B~solar neutrino background is
 significant due to the large total mass of the liquid scintillator in the
 active region.  Electrons from elastic scattering of \B~solar
 neutrinos have nearly a flat energy spectrum around the
 Q-value~\cite{SNOp-B8-bkg}. We simulate \B~background as a single
 monochromatic electron with energy of 2.53~MeV (Q-value of \Te). A
 2.53~MeV electron travels a total path length of 15.5$\pm$2.0~mm, has
-a distance from the origin of 12.6$\pm$2.2~mm in 55$\pm$7~ps and
+a distance from the origin of 12.6$\pm$2.2~mm in 55$\pm$7~ps, and
 takes 49$\pm$2~ps to drop below Cherenkov threshold.
 
 The shape of scintillation and Cherenkov PE timing distributions in
@@ -139,7 +142,7 @@ electrons from 0\nbb-events.
   \caption{\emph{Left:} A `zoomed-in' view of the photo-electron (PE)
    arrival times of signal and background events produced at the
    center of the detector.  The distribution in time for Cherenkov
-   PE's from \Te 0\nbb is shown in solid black; Cherenkov PE's from
+   PEs from \Te 0\nbb is shown in solid black; Cherenkov PEs from
    \B~ solar neutrino background are shown in dashed red. PEs from
    scintillation are shown as the blue solid line. The line at 33.5~ns
    indicates the cut for the early PE sample selection.  \emph{Right:}
@@ -167,7 +170,7 @@ in \B~ neutrino interactions is being produced by a single electron,
 while the same kinetic energy is split between two electrons in
 0\nbb-decay events~\footnote{We do not use the small difference in the
 total number of PEs in the early PE sample due to the Cherenkov PE
-contribution to separate 0\nbb-decay signal from \B~background
+contribution to separate 0\nbb-decay signal from \B~background.
 However, it may provide an extra handle on signal-background
 separation in a multivariate analysis when combined with directional
 and topographical information.}.
